--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <nav>
         <a href="index.html">Articles</a>
+        <a href="projects/projects.html">Projects</a>
         <a href="about/about.html">About Me</a>
     </nav>
     <div class="container">
